--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" /> <!-- 读取手机状态 phone group -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_SETTINGS" />
-    <!-- SDCard中创建与删除文件权限 -->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
+    <uses-permission android:name="android.permission.READ_SETTINGS" /> <!-- SDCard中创建与删除文件权限 -->
+    <uses-permission
+        android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
         tools:ignore="ProtectedPermissions" />
 
     <application
@@ -32,6 +32,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="n">
+
+
         <activity
             android:name=".ui.activity.LoadingActivity"
             android:screenOrientation="portrait"
@@ -196,9 +198,15 @@
             android:name=".ui.activity.memory.MemoryActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ui.activity.memory.MemoryNewActivity" />
+        <activity
+            android:name=".ui.activity.aidlTest.AidlDemoActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/AppTheme.NoActionBar" />
 
-        <activity android:name=".ui.activity.memory.MemoryNewActivity"/>
-
+        <service
+            android:name=".ui.activity.aidlTest.RemoteService"
+            android:process=":remote" />
 
         <service
             android:name=".utils.x5.PreLoadX5Service"
