--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.1'
         classpath 'com.mcxiaoke.gradle:packer-ng:1.0.9'
+        classpath 'org.aspectj:aspectjtools:1.9.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
