--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,6 +133,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     implementation 'com.jakewharton:butterknife:8.8.1'
+    //implementation 'com.jakewharton:butterknife-compiler:8.8.1'
+
     // apt 很重要
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.mcxiaoke.gradle:packer-helper:1.0.9'
@@ -215,5 +217,7 @@ dependencies {
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     implementation 'org.aspectj:aspectjrt:1.9.5'
+    implementation 'com.github.markzhai:blockcanary-android:1.5.0'
+
 
 }
