--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,13 @@ android {
         ndk {
             abiFilters "armeabi"
         }
+
+        //添加如下配置就OK了
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath true
+            }
+        }
     }
     buildTypes {
         release {
@@ -110,6 +117,8 @@ android {
             signingConfig signingConfigs.config
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
+
     }
 
     sourceSets {
@@ -122,6 +131,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    packagingOptions {
+        exclude 'META-INF/gradle/incremental.annotation.processors'
+    }
 }
 
 dependencies {
@@ -133,7 +145,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     implementation 'com.jakewharton:butterknife:10.2.1'
-    //implementation 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jakewharton:butterknife-compiler:10.2.1'
 
     // apt 很重要
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
@@ -217,6 +229,9 @@ dependencies {
     testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     implementation 'org.aspectj:aspectjrt:1.9.5'
     implementation 'com.github.markzhai:blockcanary-android:1.5.0'
+    annotationProcessor project(path: ':define-butterknife-compiler')
+    implementation project(path: ':define-butterknife-annontations')
+    implementation project(path: ':define-butterknife')
 
 
 }
