--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':butterknife-annontations', ':butterknife-compiler'
+include ':app', ':define-butterknife-annontations', ':define-butterknife-compiler', ':define-butterknife'
