--- a/app/build.gradle
+++ b/app/build.gradle
@@ -227,6 +227,7 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    //debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.2'
     implementation 'org.aspectj:aspectjrt:1.9.5'
     implementation 'com.github.markzhai:blockcanary-android:1.5.0'
     annotationProcessor project(path: ':define-butterknife-compiler')
