--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'com.mcxiaoke.gradle:packer-ng:1.0.9'
         classpath 'org.aspectj:aspectjtools:1.9.5'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
