md 实现知乎的效果

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -253,6 +253,11 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/AppThemeNew" />
 
+        <activity
+            android:name=".ui.activity.defineview.MDBehaviorActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/AppThemeNew" />
+
         <service
             android:name=".ui.activity.aidlTest.RemoteService"
             android:process=":remote" />
