--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -198,8 +198,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.materialDesign.MaterialDesignActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:configChanges="orientation|keyboardHidden|screenSize" />
         <activity
             android:name=".ui.activity.defineview.DefineViewDemoActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
