--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -257,6 +257,11 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/AppThemeNew" />
 
+        <activity
+            android:name=".ui.activity.defineview.MDRecyclerViewActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/AppThemeNew" />
+
         <service
             android:name=".ui.activity.aidlTest.RemoteService"
             android:process=":remote" />
