控件模糊，效果不是很好哦。全屏遮罩显示多级菜单。适配器模式

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven { url 'https://github.com/500px/500px-android-blur/raw/master/releases/' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
@@ -32,6 +33,8 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven { url 'https://github.com/500px/500px-android-blur/raw/master/releases/' }
+
     }
 }
 
