--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,6 +129,7 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -136,6 +137,18 @@ android {
 
     packagingOptions {
         exclude 'META-INF/gradle/incremental.annotation.processors'
+        pickFirst 'lib/armeabi-v7a/libRSSupport.so'
+        pickFirst 'lib/arm64-v8a/libRSSupport.so'
+        pickFirst 'lib/x86_64/libRSSupport.so'
+        pickFirst 'lib/x86/libRSSupport.so'
+        pickFirst 'lib/arm64-v8a/librsjni.so'
+        pickFirst 'lib/x86/librsjni.so'
+        pickFirst 'lib/x86_64/librsjni.so'
+        pickFirst 'lib/armeabi-v7a/librsjni.so'
+        pickFirst 'lib/x86_64/librsjni_androidx.so'
+        pickFirst 'lib/armeabi-v7a/librsjni_androidx.so'
+        pickFirst 'lib/x86/librsjni_androidx.so'
+        pickFirst 'lib/arm64-v8a/librsjni_androidx.so'
     }
 }
 
@@ -236,6 +249,10 @@ dependencies {
     annotationProcessor project(path: ':define-butterknife-compiler')
     implementation project(path: ':define-butterknife-annontations')
     implementation project(path: ':define-butterknife')
+
+    implementation 'io.alterac.blurkit:blurkit:1.1.1'
+    implementation 'jp.wasabeef:blurry:3.0.0'
+    implementation 'com.fivehundredpx:blurringview:1.0.0'
 
 
 }
