视差动画 - 酷狗音乐引导页

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -253,6 +253,7 @@ dependencies {
     implementation 'io.alterac.blurkit:blurkit:1.1.1'
     implementation 'jp.wasabeef:blurry:3.0.0'
     implementation 'com.fivehundredpx:blurringview:1.0.0'
+    implementation 'com.android.support:percent:28.0.0'
 
 
 }
