--- a/app/build.gradle
+++ b/app/build.gradle
@@ -254,6 +254,7 @@ dependencies {
     implementation 'jp.wasabeef:blurry:3.0.0'
     implementation 'com.fivehundredpx:blurringview:1.0.0'
     implementation 'com.android.support:percent:28.0.0'
+    implementation 'com.google.guava:guava:29.0-jre'
 
 
 }
