--- a/app/build.gradle
+++ b/app/build.gradle
@@ -255,6 +255,8 @@ dependencies {
     implementation 'com.fivehundredpx:blurringview:1.0.0'
     implementation 'com.android.support:percent:28.0.0'
     implementation 'com.google.guava:guava:29.0-jre'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
 
 
 }
