--- a/app/build.gradle
+++ b/app/build.gradle
@@ -256,7 +256,7 @@ dependencies {
     implementation 'com.android.support:percent:28.0.0'
     implementation 'com.google.guava:guava:29.0-jre'
     implementation 'com.jakewharton.timber:timber:4.7.1'
-
+    implementation 'org.greenrobot:eventbus:3.1.1'
 
 
 }
