--- a/app/build.gradle
+++ b/app/build.gradle
@@ -234,8 +234,8 @@ dependencies {
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.8.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
 
@@ -256,7 +256,12 @@ dependencies {
     implementation 'com.android.support:percent:28.0.0'
     implementation 'com.google.guava:guava:29.0-jre'
     implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'com.android.volley:volley:1.1.1'
+    // 协程
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
+
 
 
 }
