--- a/app/build.gradle
+++ b/app/build.gradle
@@ -262,6 +262,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
 
+    implementation 'com.airbnb.android:lottie:3.2.0'
+
 
 
 }
