--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
 *.iml
 .gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/encodings.xml
-/.idea/libraries
-/.idea/caches
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+local.properties
 .idea
+.DS_Store
+build
+captures
+.externalNativeBuild
+.cxx
