--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
 
     ext.lifecycle_version = "1.1.1"
     ext.roomVersion = "1.1.1"
+    ext.kotlin_version = "1.4.20"
 
     repositories {
         /*maven{ url'http://maven.aliyun.com/nexus/content/groups/public/' }
@@ -18,7 +19,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'com.mcxiaoke.gradle:packer-ng:1.0.9'
         classpath 'org.aspectj:aspectjtools:1.9.5'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
