--- a/app/build.gradle
+++ b/app/build.gradle
@@ -273,6 +273,13 @@ dependencies {
     // 协程
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
+    // activity result api
+    //implementation 'androidx.activity:activity-ktx:1.1.0'
+    implementation 'androidx.activity:activity-ktx:1.2.0-beta02'
+    //implementation 'androidx.fragment:fragment-ktx:1.2.5'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-beta02'
+    // anko
+    implementation "org.jetbrains.anko:anko-commons:0.10.8"
 
 
 
