--- a/app/build.gradle
+++ b/app/build.gradle
@@ -279,9 +279,9 @@ dependencies {
     //implementation 'androidx.fragment:fragment-ktx:1.2.5'
     implementation 'androidx.fragment:fragment-ktx:1.3.0-beta02'
     // anko
-    implementation "org.jetbrains.anko:anko-commons:0.10.8"
-
-
+    implementation 'org.jetbrains.anko:anko-commons:0.10.8'
+    // https://github.com/H07000223/FlycoTabLayout
+    implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
 
 
 }
